# labforge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: demo_lab.py  theory.md  theory_gamma.md
src/labforge/: __init__.py  controls.py  figures.py  lab.py  mathtext.py  param.py  registry.py  scan.py  shell.py  state.py  theme.py  ui.py
src/labforge/pages/: __init__.py  analysis.py  panel.py  scroll.py  simulation.py  theory.py  visualization.py
tests/: stubs.py  test_lab.py  test_param.py  test_render.py  test_scan.py  test_smoke.py  test_theme.py
