[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labforge"
version = "0.1.0"
description = "Wrap plain Python functions into a small scientific Flet desktop app: theory, simulation, visualization, analysis."
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Daniel La Rocco" }]
requires-python = ">=3.10"
dependencies = [
    "flet==0.86.0",
    "numpy>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/labforge"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
