[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labforge"
version = "0.1.1"
description = "Wrap plain Python functions into a small scientific Flet desktop app: theory, simulation, visualization, analysis."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Daniel La Rocco" }]
requires-python = ">=3.10"
keywords = [
    "flet",
    "scientific-computing",
    "simulation",
    "visualization",
    "desktop-app",
    "matplotlib",
    "gui",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "flet==0.86.0",
    "numpy>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0"]

[project.urls]
Homepage = "https://github.com/laroccod/labforge"
Repository = "https://github.com/laroccod/labforge"
Issues = "https://github.com/laroccod/labforge/issues"
Changelog = "https://github.com/laroccod/labforge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/labforge"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
